Changed Hamburger file name to MenuIcon

--- a/src/components/services.module.css
+++ b/src/components/services.module.css
@@ -7,8 +7,11 @@
   margin-bottom: 2rem;
 }
 
-.services li {
-  margin-bottom: 1rem;
+.services ul {
   margin-inline: auto;
   max-width: 15rem;
+}
+
+.services li {
+  margin-bottom: 1rem;
 }
