--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -22,3 +22,13 @@
 .header figure {
   max-width: 8rem;
 }
+
+.nav-link {
+  color: currentColor;
+  cursor: pointer;
+  transition: color 250ms ease-in-out;
+}
+
+.nav-link:hover {
+  color: var(--color-primary-dark);
+}
