--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
   --color-primary: #f6db4a;
   --color-primary-dark: #d1bd49;
   --color-secondary: #b64242;
+  --color-secondary-light: #e44b4b;
 }
 
 *,
