Added nav links

--- a/src/components/UI/menuIcon.module.css
+++ b/src/components/UI/menuIcon.module.css
@@ -48,3 +48,9 @@
 .bottom.active {
   transform: rotate(45deg) translateY(-5px);
 }
+
+@media screen and (min-width: 768px) {
+  .hamburger {
+    display: none;
+  }
+}
