--- a/src/index.css
+++ b/src/index.css
@@ -62,3 +62,10 @@ a:visited {
   text-decoration: none;
   color: currentColor;
 }
+
+@media only screen and (min-width: 768px) {
+  main {
+    max-width: 950px;
+    margin-inline: auto;
+  }
+}
